tests/ui/fail/out_of_bounds.rs
use tuple_type::TypeAt;

fn main() {
    let _: _  = <(i8,) as TypeAt<1>>::Type::default();
}
